--- a/index.html
+++ b/index.html
@@ -7,3 +7,64 @@
 (_)  (_) (_) \____| (_)
 
 -->  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moritz Gauss - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Pinyon+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <h1>Moritz Gauss</h1>
+        <p>Digital, product design. E-Mail at moritzgg99@gmail.com</p>
+        <button id="messageButton">SEND ME A MESSAGE!</button>
+        <div id="contactForm" class="contact-form">
+            <form>
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <label for="emoji">Your Favorite Emoji:</label>
+                <input type="text" id="emoji" name="emoji">
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </header>
+
+    <section class="projects-section">
+      <h2>PROJECTS</h2>
+      <div class="container">
+        <div class="item"><div class="folder"></div><a href="#">LINK TO >> RISE 2 SHINE LANDING PAGE & SHOP</a></div>
+        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> APP FOR SMART TOOTHBRUSH</a></div>
+        <div class="item"><div class="folder"></div><a href="#">LINK TO >> NEW APP DESIGN</a></div>
+        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> UI/UX WEBSITE REDESIGN</a></div>
+      </div>
+    </section>
+
+    <section class="templates-section">
+      <h2>TEMPLATES</h2>
+      <div class="container">
+        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> BYEBAMBI WEBSITE REDESIGN</a></div>
+        <div class="item"><div class="folder"></div><a href="#">LINK TO >> WEBSITE TEMPLATES IN FIGMA</a></div>
+        <div class="item"><div class="folder"></div><a href="#">LINK TO >> PORTFOLIO TEMPLATE</a></div>
+        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> LANDING PAGE CONCEPT</a></div>
+      </div>
+    </section>
+
+    <footer>
+        <h3><a href="#">About</a> | <a href="#">Prices</a></h3>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
