--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
         <h1>Moritz Gauss</h1>
-        <p>Digital, product design. E-Mail at moritzgg99@gmail.com</p>
+        <p>Digital, product design. E-Mail at moritzggauss@gmail.com</p>
         <button id="messageButton">SEND ME A MESSAGE!</button>
         <div id="contactForm" class="contact-form">
             <form>
