--- a/index.html
+++ b/index.html
@@ -24,21 +24,12 @@
         <p>Digital, product design. E-Mail at moritzggauss@gmail.com</p>
         <button id="messageButton">SEND ME A MESSAGE!</button>
         <div id="contactForm" class="contact-form">
-            <form>
-                <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <label for="emoji">Your Favorite Emoji:</label>
-                <input type="text" id="emoji" name="emoji">
-
-                <button type="submit">Submit</button>
-            </form>
+            <form id="contact-form">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea> 
+  <textarea name="your favorite emoji" placeholder=":)"></textarea>
+  <button type="submit">Send</button>
+</form>
         </div>
     </header>
 
@@ -65,6 +56,7 @@
     <footer>
         <h3><a href="#">About</a> | <a href="#">Prices</a></h3>
     </footer>
+
 
     <script src="script.js"></script>
 </body>
