--- a/index.html
+++ b/index.html
@@ -12,52 +12,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moritz Gauss - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="modde.css">
 </head>
 <body>
-
     <header>
         <h1>Moritz Gauss</h1>
-        <p>Digital, product design. E-Mail at moritzggauss@gmail.com</p>
-        <button id="messageButton">SEND ME A MESSAGE!</button>
-        <div id="contactForm" class="contact-form">
-            <form id="contact-form">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea> 
-  <textarea name="your favorite emoji" placeholder=":)"></textarea>
-  <button type="submit">Send</button>
-</form>
-        </div>
     </header>
+    <nav>
+        <a href="#">Photo</a>
+        <a href="#">Video</a>
+        <a href="#">Textiles</a>
+    </nav>
 
-    <section class="projects-section">
-      <h2>PROJECTS</h2>
-      <div class="container">
-        <div class="item"><div class="folder"></div><a href="#">LINK TO >> RISE 2 SHINE LANDING PAGE & SHOP</a></div>
-        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> APP FOR SMART TOOTHBRUSH</a></div>
-        <div class="item"><div class="folder"></div><a href="#">LINK TO >> NEW APP DESIGN</a></div>
-        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> UI/UX WEBSITE REDESIGN</a></div>
-      </div>
-    </section>
+    <div class="main-container">
+        <div class="content">
+            <div class="scroll-box">
+                <div class="info">
+                    <h2>Le Voyage Imaginaire (2020)</h2>
+                    <p>Fotobuch, Hardcover</p>
+                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                </div>
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
+                </div>
+            </div>
+        </div>
+        <div class="arrows-wrapper">
+            <div class="arrows">
+                <span class="arrow arrow_left">←</span>
+                <span class="arrow arrow_right">→</span>
+            </div>
+        </div>
 
-    <section class="templates-section">
-      <h2>TEMPLATES</h2>
-      <div class="container">
-        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> BYEBAMBI WEBSITE REDESIGN</a></div>
-        <div class="item"><div class="folder"></div><a href="#">LINK TO >> WEBSITE TEMPLATES IN FIGMA</a></div>
-        <div class="item"><div class="folder"></div><a href="#">LINK TO >> PORTFOLIO TEMPLATE</a></div>
-        <div class="item"><div class="folder"></div><a href="#">OPEN POPUP >> LANDING PAGE CONCEPT</a></div>
-      </div>
-    </section>
+        <div class="content">
+            <div class="scroll-box">
+                <div class="info">
+                    <h2>Form und Funktion (2022)</h2>
+                    <p>Design-Monografie, Softcover</p>
+                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                </div>
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="info">
+                    <h2>Le Voyage Imaginaire (2020)</h2>
+                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                </div>
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
+                </div>
+            </div>
+        </div>
+        <div class="arrows-wrapper">
+            <div class="arrows">
+                <span class="arrow arrow_left">←</span>
+                <span class="arrow arrow_right">→</span>
+            </div>
+        </div>
 
-    <footer>
-        <h3><a href="#">About</a> | <a href="#">Prices</a></h3>
-    </footer>
+        <div class="content">
+            <div class="scroll-box">
+                <div class="info">
+                    <h2>Form und Funktion (2022)</h2>
+                    <p>Design-Monografie, Softcover</p>
+                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                </div>
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Form und Funktion 2022">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/spider-cair-handwerksmesse-münchen-objekt1-moritzgauss.jpg" alt="Image 2">
+                </div>
+            </div>
+            <div class="scroll-box">
+                <div class="img-container">
+                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 3">
+                </div>
+            </div>
+        </div>
+        <div class="arrows-wrapper">
+            <div class="arrows">
+                <span class="arrow arrow_left">←</span>
+                <span class="arrow arrow_right">→</span>
+            </div>
+        </div>
+    </div>
 
-
-    <script src="script.js"></script>
+    <script src="swag.js"></script>
 </body>
 </html>
