index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -81,11 +81,15 @@
                 </div>
             </div>
             <div class="scroll-box">
+                <div class="info">
+                </div>
                 <div class="img-container">
                     <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
                 </div>
             </div>
             <div class="scroll-box">
+                <div class="info">
+                </div>
                 <div class="img-container">
                     <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
                 </div>
@@ -110,11 +114,15 @@
                 </div>
             </div>
             <div class="scroll-box">
+                <div class="info">
+                </div>
                 <div class="img-container">
                     <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/spider-cair-handwerksmesse-münchen-objekt1-moritzgauss.jpg" alt="Image 2">
                 </div>
             </div>
             <div class="scroll-box">
+                <div class="info">
+                </div>
                 <div class="img-container">
                     <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 3">
                 </div>
