index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -20,87 +20,88 @@
         <h1>Moritz Gauss</h1>
     </header>
     <nav>
-        <a href="#">Photo</a>
-        <a href="#">Video</a>
-        <a href="#">Textiles</a>
+        <a href="index.html">Best Of</a>
+        <a href="moritzgauss.com/digital">Digital</a>
+        <a href="moritzgauss.com/objects">Objects</a>
+        <a href="moritzgauss.com/creative">Creative</a>
     </nav>
 
     <div class="main-container">
-        <div class="content">
-            <div class="scroll-box">
-                <div class="info">
-                    <h2>Le Voyage Imaginaire (2020)</h2>
-                    <p>Fotobuch, Hardcover</p>
-                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
-                </div>
-            </div>
+<div class="content">
+    <div class="scroll-box">
+        <div class="info">
+            <h2>Le Voyage Imaginaire (2020)</h2>
+            <p>Fotobuch, Hardcover</p>
+            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
         </div>
-        <div class="arrows-wrapper">
-            <div class="arrows">
-                <span class="arrow arrow_left">←</span>
-                <span class="arrow arrow_right">→</span>
-            </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
         </div>
+    </div>
+    <div class="scroll-box">
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
+        </div>
+    </div>
+    <div class="scroll-box">
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
+        </div>
+    </div>
+    <div class="scroll-box">
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
+        </div>
+    </div>
+</div>
+<div class="arrows-wrapper">
+    <div class="arrows">
+        <span class="arrow arrow_left">←</span>
+        <span class="arrow arrow_right">→</span>
+    </div>
+</div>
 
-        <div class="content">
-            <div class="scroll-box">
-                <div class="info">
-                    <h2>Form und Funktion (2022)</h2>
-                    <p>Design-Monografie, Softcover</p>
-                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="info">
-                    <h2>Le Voyage Imaginaire (2020)</h2>
-                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="info">
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="info">
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
-                </div>
-            </div>
+<div class="content">
+    <div class="scroll-box" id="form-und-funktion">
+        <div class="info">
+            <h2>Form und Funktion (2022)</h2>
+            <p>Design-Monografie, Softcover</p>
+            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
         </div>
-        <div class="arrows-wrapper">
-            <div class="arrows">
-                <span class="arrow arrow_left">←</span>
-                <span class="arrow arrow_right">→</span>
-            </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
         </div>
+    </div>
+    <div class="scroll-box">
+        <div class="info">
+            <h2>Le Voyage Imaginaire (2020)</h2>
+            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
+        </div>
+    </div>
+    <div class="scroll-box">
+        <div class="info">
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
+        </div>
+    </div>
+    <div class="scroll-box">
+        <div class="info">
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
+        </div>
+    </div>
+</div>
+<div class="arrows-wrapper">
+    <div class="arrows">
+        <span class="arrow arrow_left">←</span>
+        <span class="arrow arrow_right">→</span>
+    </div>
+</div>
 
         <div class="content">
             <div class="scroll-box">
