--- a/index.html
+++ b/index.html
@@ -26,116 +26,122 @@
         <a href="moritzgauss.com/creative">Creative</a>
     </nav>
 
-    <div class="main-container">
-<div class="content">
-    <div class="scroll-box">
-        <div class="info">
-            <h2>Le Voyage Imaginaire (2020)</h2>
-            <p>Fotobuch, Hardcover</p>
-            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-        </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
-        </div>
-    </div>
-</div>
-<div class="arrows-wrapper">
-    <div class="arrows">
-        <span class="arrow arrow_left">←</span>
-        <span class="arrow arrow_right">→</span>
-    </div>
-</div>
+<div class="main-container">
 
-<div class="content">
-    <div class="scroll-box" id="form-und-funktion">
-        <div class="info">
-            <h2>Form und Funktion (2022)</h2>
-            <p>Design-Monografie, Softcover</p>
-            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+    <!-- Le Voyage Imaginaire Section -->
+    <div class="content" id="le-voyage-imaginaire">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Le Voyage Imaginaire (2020)</h2>
+                <p>Fotobuch, Hardcover</p>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
+            </div>
         </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
+            </div>
         </div>
-    </div>
-    <div class="scroll-box">
-        <div class="info">
-            <h2>Le Voyage Imaginaire (2020)</h2>
-            <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
+            </div>
         </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="info">
-        </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="info">
-        </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
+            </div>
         </div>
     </div>
-</div>
-<div class="arrows-wrapper">
-    <div class="arrows">
-        <span class="arrow arrow_left">←</span>
-        <span class="arrow arrow_right">→</span>
-    </div>
-</div>
 
-        <div class="content">
-            <div class="scroll-box">
-                <div class="info">
-                    <h2>Form und Funktion (2022)</h2>
-                    <p>Design-Monografie, Softcover</p>
-                    <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Form und Funktion 2022">
-                </div>
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+
+    <!-- Form und Funktion Section -->
+    <div class="content" id="form-und-funktion">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Form und Funktion (2022)</h2>
+                <p>Design-Monografie, Softcover</p>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
             </div>
-            <div class="scroll-box">
-                <div class="info">
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/spider-cair-handwerksmesse-münchen-objekt1-moritzgauss.jpg" alt="Image 2">
-                </div>
-            </div>
-            <div class="scroll-box">
-                <div class="info">
-                </div>
-                <div class="img-container">
-                    <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 3">
-                </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
             </div>
         </div>
-        <div class="arrows-wrapper">
-            <div class="arrows">
-                <span class="arrow arrow_left">←</span>
-                <span class="arrow arrow_right">→</span>
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Le Voyage Imaginaire (2020)</h2>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
             </div>
         </div>
     </div>
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+
+    <!-- Letzter Abschnitt für das nächste Projekt -->
+    <div class="content" id="projekt-drei">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Spider Cair (2022)</h2>
+                <p>Objekt-Installation, München Handwerksmesse</p>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/spider-cair-handwerksmesse-münchen-objekt1-moritzgauss.jpg" alt="Spider Cair Installation">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 2">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 3">
+            </div>
+        </div>
+    </div>
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+</div>
 
     <script src="swag.js"></script>
 </body>
