--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Moritz Gauss</h1>
+        <h1><a href="https://mori77z.github.io/about">Moritz Gauss</a></h1>
     </header>
     <nav>
         <a href="index.html">Best Of</a>
