--- a/index.html
+++ b/index.html
@@ -12,50 +12,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Creative</title>
     <link rel="stylesheet" href="modde.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1><a href="https://mori77z.github.io/about">Moritz Gauss</a></h1>
+        <h1><a href="/about">Moritz Gauss</a></h1>
     </header>
-    <nav>
-        <a href="index.html">Best Of</a>
-        <a href="moritzgauss.com/digital">Digital</a>
-        <a href="moritzgauss.com/objects">Objects</a>
-        <a href="moritzgauss.com/creative">Creative</a>
-    </nav>
+
+<nav>
+    <a href="/" class="nav active">Best Of</a>
+    <a href="/digital" class="nav">Digital</a>
+    <a href="/objects" class="nav">Objects</a>
+    <a href="/creative" class="nav">Creative</a>
+</nav>
 
 <div class="main-container">
 
-    <!-- Le Voyage Imaginaire Section -->
-    <div class="content" id="le-voyage-imaginaire">
+    <!-- Creative Direction Section -->
+    <div class="content" id="creative-direction">
         <div class="scroll-box">
             <div class="info">
-                <h2>Le Voyage Imaginaire (2020)</h2>
-                <p>Fotobuch, Hardcover</p>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                <h2>Creative Direction (2024)</h2>
+                <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
+                <a href="https://r2shine.de">https://r2shine.de</a>
             </div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/Bildschirmfoto%202024-03-14%20um%2022.09.50.jpeg" alt="Le Voyage Imaginaire 2020">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0061.JPG" alt="Image 2">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0070.JPG" alt="Image 3">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd2-copyright-moritzgauss.png" alt="Creative Direction Image 2">
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_0223.JPG" alt="Image 4">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd3-copyright-moritzgauss.JPG" alt="Creative Direction Image 3">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd4-copyright-moritzgauss.JPG" alt="Creative Direction Image 4">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd5-copyright-moritzgauss.jpg" alt="Creative Direction Image 5">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd6-copyright-moritzgauss.jpg" alt="Creative Direction Image 6">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd7-copyright-moritzgauss.JPG" alt="Creative Direction Image 7">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd8-copyright-moritzgauss.png" alt="Creative Direction Image 8">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd9-copyright-moritzgauss.JPG" alt="Creative Direction Image 9">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd10-copyright-moritzgauss.jpg" alt="Creative Direction Image 10">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd11-copyright-moritzgauss.JPG" alt="Creative Direction Image 11">
             </div>
         </div>
     </div>
@@ -67,37 +111,46 @@
         </div>
     </div>
 
-    <!-- Form und Funktion Section -->
-    <div class="content" id="form-und-funktion">
+    <!-- Photography Section -->
+    <div class="content" id="photography">
         <div class="scroll-box">
             <div class="info">
-                <h2>Form und Funktion (2022)</h2>
-                <p>Design-Monografie, Softcover</p>
+                <h2>Photography (2019 - Now)</h2>
+                <p>Digital and analog photography</p>
                 <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
             </div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMG_6546.jpeg" alt="Form und Funktion 2022">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info">
-                <h2>Le Voyage Imaginaire (2020)</h2>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-            </div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM005_31A.JPG" alt="Le Voyage Imaginaire 2020">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/IMM006_30A.JPG" alt="Image 3">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo2-copyright-moritzgauss.jpg" alt="Photography Image 2">
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/imm032_5.jpg" alt="Image 4">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo3-copyright-moritzgauss.jpg" alt="Photography Image 3">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo4-copyright-moritzgauss.jpg" alt="Photography Image 4">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo5-copyright-moritzgauss.jpg" alt="Photography Image 5">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/photo6-copyright-moritzgauss.jpg" alt="Photography Image 6">
             </div>
         </div>
     </div>
@@ -109,39 +162,13 @@
         </div>
     </div>
 
-    <!-- Letzter Abschnitt für das nächste Projekt -->
-    <div class="content" id="projekt-drei">
-        <div class="scroll-box">
-            <div class="info">
-                <h2>Spider Cair (2022)</h2>
-                <p>Objekt-Installation, München Handwerksmesse</p>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
-            </div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/spider-cair-handwerksmesse-münchen-objekt1-moritzgauss.jpg" alt="Spider Cair Installation">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 2">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/digital/refs/heads/main/material/xyzz.jpg" alt="Image 3">
-            </div>
-        </div>
-    </div>
-
-    <div class="arrows-wrapper">
-        <div class="arrows">
-            <span class="arrow arrow_left">←</span>
-            <span class="arrow arrow_right">→</span>
-        </div>
-    </div>
 </div>
+
+
+ <div class="zoomed-container">
+    <img class="zoomed-image" src="" alt="Zoomed Image">
+</div>
+
 
     <script src="swag.js"></script>
 </body>
