Final index.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
 
 <nav>
-    <a href="/" class="nav active">Best Of</a>
+    <a href="/" class="nav active">Creative</a>
     <a href="/digital" class="nav">Digital</a>
     <a href="/objects" class="nav">Objects</a>
-    <a href="/creative" class="nav">Creative</a>
+    <a href="/creative" class="nav">Concepts</a>
 </nav>
 
 <div class="main-container">
@@ -100,6 +100,157 @@
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/cd11-copyright-moritzgauss.JPG" alt="Creative Direction Image 11">
+            </div>
+        </div>
+    </div>
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+
+    <!-- Artworks Section -->
+    <div class="content" id="artworks">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Artworks (2023)</h2>
+                <p>A collection of digital and physical artworks.</p>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork2-copyright-moritzgauss.jpeg" alt="Artworks Image 2">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork3-copyright-moritzgauss.jpeg" alt="Artworks Image 3">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork4-copyright-moritzgauss.jpeg" alt="Artworks Image 4">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork5-copyright-moritzgauss.jpeg" alt="Artworks Image 5">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork6-copyright-moritzgauss.jpeg" alt="Artworks Image 6">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/artwork7-copyright-moritzgauss.jpg" alt="Artworks Image 7">
+            </div>
+        </div>
+    </div>
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+
+<!-- Typography Section -->
+<div class="content" id="typography">
+    <div class="scroll-box">
+        <div class="info">
+            <h2>Typography</h2>
+            <p>Font Families: Gull Edge and Tukan Sans</p>
+            <ul>
+                <li><a href="https://drive.google.com/drive/folders/1U2_Ybbpf-9-2r35jf8VSxBvZGMz3gh_v?usp=sharing">Download Tukan Sans</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1r7RaDSKOWb6uzabs4UIma_JYrOsKwCqy?usp=drive_link">Download Gull Edge</a></li>
+            </ul>
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo1-copyright-moritzgauss.jpg" alt="Typography Image 1">
+        </div>
+    </div>
+    
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo2-copyright-moritzgauss.PNG" alt="Typography Image 2">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo3-copyright-moritzgauss.png" alt="Typography Image 3">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo4-copyright-moritzgauss.png" alt="Typography Image 4">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo5-copyright-moritzgauss.jpg" alt="Typography Image 5">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo6-copyright-moritzgauss.png" alt="Typography Image 6">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/typo7-copyright-moritzgauss.png" alt="Typography Image 7">
+        </div>
+    </div>
+</div>
+
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+
+    <!-- Printworks Section -->
+    <div class="content" id="printworks">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Printworks (2021 - Now)</h2>
+                <p>Digital and screen print</p>
+                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/print1-copyright-moritzgauss.jpg" alt="Printworks Image 1">
+            </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/creative/refs/heads/main/material/print3-copyright-moritzgauss.jpg" alt="Printworks Image 3">
             </div>
         </div>
     </div>
