--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="/" class="nav active">Creative</a>
     <a href="/digital" class="nav">Digital</a>
     <a href="/objects" class="nav">Objects</a>
-    <a href="/creative" class="nav">Concepts</a>
+    <a href="/concepts" class="nav">Concepts</a>
 </nav>
 
 <div class="main-container">
