--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <a href="/concepts" class="nav">Concepts</a>
 </nav>
 
-<div class="main-container">
+ <div class="main-container">
 
     <!-- Creative Direction Section -->
+  <div class="combined-container">
     <div class="content" id="creative-direction">
         <div class="scroll-box">
             <div class="info">
@@ -110,8 +111,16 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+   <div class="discr-container">
+            <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and focusing on unlocking the potential in existing materials. <br>
+             This method supports sustainability and pushes creativity through reuse and transformation. Similar to architect Arno Brandlhuber, who transforms existing structures into something new and impactful, Rise 2 Shine applies this concept to fashion. 
+             <br>Seeking to innovate by repurposing what already exists, to create unique results. In a crowded market, Rise 2 Shine advocates for a fresh perspective that values and transforms existing resources. By remixing and reimagining current materials, the products are unique, sustainable and eye-opening. The registered trademark ® embodies this approach, echoing the simplicity and elegance seen in Apple's 2010s marketing. 
+             <br>Rise 2 Shine® represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
+            </p>
+        </div>
+    </div>
 
-    <!-- Artworks Section -->
+  <div class="combined-container">
     <div class="content" id="artworks">
         <div class="scroll-box">
             <div class="info">
@@ -168,8 +177,8 @@
         </div>
     </div>
 
-<!-- Typography Section -->
-<div class="content" id="typography">
+  <div class="combined-container">
+   <div class="content" id="typography">
     <div class="scroll-box">
         <div class="info">
             <h2>Typography</h2>
@@ -227,15 +236,14 @@
     </div>
 </div>
 
-
-    <div class="arrows-wrapper">
+ <div class="arrows-wrapper">
         <div class="arrows">
             <span class="arrow arrow_left">←</span>
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
 
-    <!-- Printworks Section -->
+  <div class="combined-container">
     <div class="content" id="printworks">
         <div class="scroll-box">
             <div class="info">
