--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+</div>
 
   <div class="combined-container">
    <div class="content" id="typography">
@@ -241,6 +242,7 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+ </div>
 
   <div class="combined-container">
     <div class="content" id="printworks">
@@ -268,6 +270,7 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+ </div>
 
     <!-- Photography Section -->
     <div class="content" id="photography">
@@ -319,7 +322,7 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
-
+</div>
 </div>
 
 
